# wxWidgets-custom

./: .gitignore  CMakeLists.txt  Makefile  app.cpp  app.h  campanel.cpp  campanel.h  panels.cpp  panels.h
lib/include/wx/: setup.h
